include tests for save and remove

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "devDependencies": {
     "mocha": "*",
-    "mongoose": "*"
+    "mongoose": "*",
+    "uuid": "*"
   },
   "licenses": [
     {
