--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "devDependencies": {
     "mocha": "*",
     "mongoose": "*",
-    "uuid": "*"
+    "uuid": "*",
+    "should": "*"
   },
   "licenses": [
     {
